--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ baseurl: "darkness" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-architect
 plugins:
   - jekyll-feed
 
